# gold_rush

./: Cargo.toml  Dockerfile  README.md
config/: config.toml
src/: client.rs  config.rs  game_logic.rs  main.rs
src/data/: area.rs  dig.rs  dig_errors.rs  dig_point.rs  explore.rs  license.rs  mod.rs  wallet.rs
src/workers/: bookkeeper.rs  digger.rs  explorer.rs  licensor.rs  mod.rs
