[package]
name = "gold_rush"
version = "0.1.0"
authors = ["andrewtsibin@gmail.com"]
edition = "2018"

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11.4", features = ["json"] }
crossbeam-utils = "0.8.1"
crossbeam-deque = "0.8.1"
crossbeam-queue = "0.3"
log = "0.4"
env_logger = "0.8.3"
governor = "0.3.2"
config = "0.11.0"
thiserror = "1.0.29"

[profile.release]
opt-level = 3